<resources>
    <string name="app_name">Экзамен</string>
    <string name="question">Вопрос</string>
    <string name="radiobutton">RadioButton</string>
    <string name="next">ВПЕРЕД</string>
    <string name="back">НАЗАД</string>
    <string name="hintText">Подсказка</string>
    <string name="questionHintText">Вопрос</string>
    <string name="again">ЗАНОВО</string>
    <string name="result">Результат</string>
    <string name="answers">Ответы</string>
    <string name="finish">Result</string>
    <string name="menu">Меню</string>
    <string name="info">Информация</string>
    <string name="date">Дата</string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="add_item">Добавить</string>
    <string name="delete_items">Удалить</string>
    <string name="delete_selected">Удалить выбранное?</string>
    <string name="all_items_deleted">Список пуст.</string>
    <string name="new_item_added">Добавлена новая позиция.</string>
    <string name="set_date">Задать дату</string>
    <string name="add_exam_title_string">Добавление экзамена</string>
    <string name="exam_name_string">Название экзамена</string>
    <string name="question_text_string">Текст вопроса</string>
    <string name="answer_variant_string">Вариант ответа</string>
    <string name="true_answer_position_string">Правильный ответ:</string>
    <string name="add_button_text">Добавить</string>
    <string name="save_button_text">Сохранить</string>
    <string name="edit_exam_title_string">Редактирование</string>
    <string name="complete_button_text">Готово</string>
    <string name="you_select">Вы выбрали\t</string>
    <string name="your_answer_string">Ваш ответ\t</string>
    <string name="correct_is">, правильный\t</string>
    <string name="score_string">Баллы:</string>
    <string name="your_answer_result_string">ваш ответ:\t</string>
    <string name="true_answer_result_string">правильный ответ:\t</string>
    <string name="penalty_point_string">Штафные баллы:\t</string>
    <string name="confirm_hint_dialog_message">Убрать два неверных варианта?</string>
    <string name="start">Начать</string>
    <string name="exam">Экзамен \"</string>
    <string name="added_to_te_list">\" добавлен в список</string>
    <string name="add_exam_description">Добавить описание экзамена</string>
    <string name="exam_description_header">Описание экзамена.</string>
    <string name="create_new_exam">Создайте новый экзамен.</string>
    <string name="select_a_completed_exam_from_this_list">
        Выберете готовый экзамен из этого списка.</string>
    <string name="stop_exam_and_back_to_menu">
        Хотите прервать экзамен и вернуться в меню?</string>
    <string-array name="numbers">
        <item />
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
